# hello_py

./: build.py  meta.yaml  pyproject.toml  setup.py
.github/workflows/: build_wheels.yml
hello_py/: __main__.py  hello_c.c  hello_c.pyx
