[tool.poetry]
name = "hello_py"
version = "0.1.0"
description = ""
authors = ["Ralf Gabriels <ralf@gabriels.dev>"]
license = "Unlicense"
readme = "README.md"
repository = "https://github.com/RalfG/hello_py"
keywords = [
    "Dummy project",
    "Hello world",
    "Cython"
]
build = "build.py"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
cython = "^0.29"

[build-system]
requires = ["poetry>=0.12", "Cython", "setuptools"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
hello_py = "hello_py.__main__:main"
